<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources">
    <string name="app_name">Convertee</string>
    <string name="app_settings">Application Settings</string>
    <string name="unit_settings">Unit Preferences</string>
    <string name="confirmation_dialog_confirm">Confirm</string>
    <string name="confirmation_dialog_cancel">Cancel</string>
    <string name="tutorial_screen1_title" translatable="false">Hi there!</string>
    <string name="tutorial_screen1_description" translatable="false">This app will be your assistant for the conversion of most unit types.</string>
    <string name="tutorial_screen2_title" translatable="false">Customize</string>
    <string name="tutorial_screen2_description" translatable="false">Pick your favourite unit types, hide ones you\'re not interested in, and hide specific units for every type.</string>
    <string name="tutorial_screen3_title" translatable="false">Share</string>
    <string name="tutorial_screen3_description" translatable="false">Click a unit abbreviation to mark a row or hold press on the converted value to copy it. It\'s that easy to share your results!</string>
    <string name="tutorial_screen4_title" translatable="false">Large selection</string>
    <string name="tutorial_screen4_description" translatable="false">There are a lot of units available! Check the unit preferences as some less common units are hidden by default. Enjoy!</string>
    <string name="setup_btn_next">Next</string>
    <string name="setup_btn_finish">Finish</string>
    <string name="setup_btn_back">Back</string>
    <string name="setup_btn_skip">Skip Setup</string>
    <string name="setup_skip_title">Skip setup?</string>
    <string name="setup_skip_message">Are you sure you want to use default settings to start with?</string>
    <string name="setup_label_title">Initial Setup:</string>
    <string name="setup_label_select_language">Language</string>
    <string name="pref_select_format_title">Number Format</string>
    <string name="pref_promode_title">Shorten unit names</string>
    <string name="setup_label_select_units">Favourite Units</string>
    <string name="setup_label_select_unit_details">Edit Favourites</string>
    <string name="menu_select_none">None</string>
    <string name="setup_format_entry_ukus" translatable="false">UK/US</string>
    <string name="setup_format_entry_de" translatable="false">DE</string>
    <string name="setup_format_previewlabel">Preview</string>
    <string name="setup_format_preview_none" translatable="false">10300.5</string>
    <string name="setup_format_preview_ukus" translatable="false">10,300.5</string>
    <string name="setup_format_preview_de" translatable="false">10.300,5</string>
    <string name="setup_units_favourites_label">Favourites (You can still add more later)</string>
    <string name="setup_favourite_details_info">Default values are just for convenience, they are displayed when the app launches and can always be changed.</string>
    <string name="content_desc_unittype_icon">Icon for this unit type</string>
    <string name="content_desc_unittype_status">This unit type is set as favourite</string>
    <string name="content_desc_fab_quickconverter_add">Add a favourite from unit types</string>
    <string name="content_desc_quickconvert_item_edit">Edit this favourite unit type</string>
    <string name="content_desc_quickconvert_item_delete">Delete this favourite unit type</string>
    <string name="tabbed_pane_tab_customized">Favourites</string>
    <string name="tabbed_pane_tab_categories">All</string>
    <string name="unit_type_categories_basics">Essential</string>
    <string name="unit_type_categories_living">Living</string>
    <string name="unit_type_categories_science">Science</string>
    <string name="unit_type_categories_maths">Maths</string>
    <string name="unit_type_categories_technology">Technology</string>
    <string name="adapter_clipboard_label">Value in</string>
    <string name="adapter_clipboard_toast">copied to clipboard</string>
    <string name="adapter_clipboard_toast_error" >ERROR: copying to clipboard failed</string>
    <string name="unit_info_button_description">Show info about the current unit</string>
    <string name="currency_last_update_title">Last update:</string>
    <string name="currency_last_update_never">Never, check internet connection.</string>
    <string name="currency_snackbar_update_finished">Currency rates were updated.</string>
    <string name="currency_snackbar_update_error">ERROR: Currency rates not updated -</string>
    <string name="colour_display_text">Colour Preview</string>
    <string name="pref_round_value_picker_title">Decimal Count</string>
    <string name="pref_round_value_picker_subtitle">Currently rounding up to</string>
    <string name="pref_round_value_picker_subtitle2">decimals.</string>
    <string name="pref_round_value_picker_error">Not saved: Value must be between 1 and 15</string>
    <string name="pref_pro_mode_select_subtitle">Hide full unit names. Recommended if you know the abbreviations well enough.</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_subtitle">Currently: </string>
    <string name="preference_language_default" translatable="false">system</string>
    <string name="language_system_desc">System language</string>
    <string name="language_en_desc" translatable="false">English</string>
    <string name="language_de_desc" translatable="false">Deutsch</string>
    <string name="language_fr_desc" translatable="false">Français</string>
    <string name="pref_number_locale_subtitle">Currently as</string>
    <string name="pref_number_locale_none" translatable="false">None</string>
    <string name="preference_number_locale_default_UK" translatable="false">en-GB</string>
    <string name="locale_number_uk_desc">UK/US: e.g. 100.000,5</string>
    <string name="locale_number_de_desc">DE: e.g. 100,000.5</string>
    <string name="pref_category_select_units">Units</string>
    <string name="pref_category_select_units_subtitle">Choose the units you want to hide.</string>
    <string name="pref_select_units_hidden_subtitle">units hidden.</string>
    <string name="pref_select_units_hidden_error">Not saved: At least two units must be visible</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_action_reset_title">Reset app</string>
    <string name="pref_action_reset_subtitle">Delete all saved settings and preferences. Type \'</string>
    <string name="pref_action_reset_targetword">reset</string>
    <string name="pref_action_reset_subtitle2">\' to confirm.</string>
    <string name="pref_action_reset_error">Wrong confirmation keyword</string>
    <string name="pref_action_reset_success">App was reset</string>
    <string name="pref_credits_title">Credits</string>
    <string name="pref_credits_subtitle">Made by Sebastian Schuler</string>
    <string name="pref_credits_link" translatable="false">https://github.com/mildlyadequate/Convertee</string>
    <string name="preference_credits" translatable="false" />
    <string name="preference_first_start" translatable="false">preference_first_start</string>
    <string name="preference_round_value" translatable="false">preference_round_value</string>
    <string name="preference_pro_mode" translatable="false">preference_pro_mode</string>
    <string name="preference_language" translatable="false">preference_language</string>
    <string name="preference_locale" translatable="false">preference_locale</string>
    <string name="preference_action_reset" translatable="false">preference_action_reset</string>
    <string name="quickconvert_editor_error_hint">Wrong input for this unit type!</string>
    <string name="quickconvert_editor_label_unittype">Unit Type</string>
    <string name="quickconvert_editor_default_unit">Default Unit</string>
    <string name="quickconvert_editor_default_value">Default Value</string>
    <string name="quickconvert_editor_header_from">Default From</string>
    <string name="quickconvert_editor_header_to">Default To</string>
    <string name="quickconvert_editor_button_save">Save</string>
    <string name="content_desc_keyboard_delete">Delete key</string>
    <string name="content_desc_keyboard_close">Close key</string>
    <string name="unit_type_value_text_hint">Value: e.g.</string>
    <string name="unit_type_value_text_hint_short">Enter value</string>
    <string name="unit_type_name_distance">Length</string>
    <string name="unit_type_name_weight">Weight</string>
    <string name="unit_type_name_temperature">Temperature</string>
    <string name="unit_type_name_time">Time</string>
    <string name="unit_type_name_numerative">Number System</string>
    <string name="unit_type_name_shoesize">Shoe Sizes</string>
    <string name="unit_type_name_volume">Volume</string>
    <string name="unit_type_name_energy">Energy</string>
    <string name="unit_type_name_fueleconomy">Fuel Economy</string>
    <string name="unit_type_name_datastorage">Data Storage</string>
    <string name="unit_type_name_pressure">Pressure</string>
    <string name="unit_type_name_area">Area</string>
    <string name="unit_type_name_angle">Angle</string>
    <string name="unit_type_name_speed">Speed</string>
    <string name="unit_type_name_force">Force</string>
    <string name="unit_type_name_currency">Currency</string>
    <string name="unit_type_name_colour">Colour</string>
    <string name="unit_type_name_brasize" >Bra Size</string>
    <string name="preference_distance_hidden" translatable="false">preference_distance_hidden</string>
    <string name="preference_weight_hidden" translatable="false">preference_weight_hidden</string>
    <string name="preference_temperature_hidden" translatable="false">preference_temperature_hidden</string>
    <string name="preference_time_hidden" translatable="false">preference_time_hidden</string>
    <string name="preference_numerative_hidden" translatable="false">preference_numerative_hidden</string>
    <string name="preference_shoesize_hidden" translatable="false">preference_shoesize_hidden</string>
    <string name="preference_volume_hidden" translatable="false">preference_volume_hidden</string>
    <string name="preference_energy_hidden" translatable="false">preference_energy_hidden</string>
    <string name="preference_fueleconomy_hidden" translatable="false">preference_fueleconomy_hidden</string>
    <string name="preference_datastorage_hidden" translatable="false">preference_datastorage_hidden</string>
    <string name="preference_pressure_hidden" translatable="false">preference_pressure_hidden</string>
    <string name="preference_area_hidden" translatable="false">preference_area_hidden</string>
    <string name="preference_angle_hidden" translatable="false">preference_angle_hidden</string>
    <string name="preference_speed_hidden" translatable="false">preference_speed_hidden</string>
    <string name="preference_force_hidden" translatable="false">preference_force_hidden</string>
    <string name="preference_currency_hidden" translatable="false">preference_currency_hidden</string>
    <string name="preference_colour_hidden" translatable="false">preference_colour_hidden</string>
    <string name="preference_brasize_hidden" translatable="false" >preference_brasize_hidden</string>
    <string name="distance_unit_km">Kilometer</string>
    <string name="distance_unit_m" >Meter</string>
    <string name="distance_unit_cm" >Centimeter</string>
    <string name="distance_unit_mm" >Millimeter</string>
    <string name="distance_unit_micm" >Micrometer</string>
    <string name="distance_unit_nm" >Nanometer</string>
    <string name="distance_unit_mi" >Mile</string>
    <string name="distance_unit_yd" >Yard</string>
    <string name="distance_unit_in" >Inch</string>
    <string name="distance_unit_ft" >Foot</string>
    <string name="tutorial_title">Tutorial</string>
</resources>