<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/mni_app_settings"
        android:orderInCategory="100"
        android:title="@string/app_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mni_unit_settings"
        android:orderInCategory="100"
        android:title="@string/unit_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mni_app_tutorial"
        android:icon="@drawable/ic_menu_help"
        android:orderInCategory="100"
        android:title="@string/tutorial_title"
        app:showAsAction="never|ifRoom" />
    <item
        android:id="@+id/mni_quickconvert_save"
        android:title="@string/quickconvert_editor_button_save"
        android:visible="false"
        app:showAsAction="always" />

</menu>