<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSetupUnitDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appsetup.AppSetupUnitFragment">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/themeBackgroundDark"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tvInitialSetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_label_title"
                android:textAppearance="@style/SetupTitleText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSelectUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:labelFor="@id/picker"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/setup_label_select_units"
                android:textAlignment="textStart"
                android:textAppearance="@style/SetupTitleText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSelectedUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/themeDaySoftLightText" />

            <TextView
                android:id="@+id/tvSelectedUnitsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:text="@string/setup_units_favourites_label"
                android:textColor="@color/themeDaySoftLightText" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSetupUnitList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:listitem="@layout/adapter_unit_type_item" />

</androidx.constraintlayout.widget.ConstraintLayout>