<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSetupUnitDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appsetup.AppSetupFormatFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/themeBackgroundDark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvInitialSetup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/setup_label_title"
                    android:textAppearance="@style/SetupTitleText"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSelectFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:labelFor="@id/picker"
                    android:paddingStart="4dp"
                    android:paddingTop="24dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="12dp"
                    android:text="@string/setup_label_select_language"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/SetupTitleText" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swtProMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="24dp"
                android:paddingEnd="16dp"
                android:paddingBottom="24dp"
                android:text="@string/setup_format_promode_desc" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <com.shawnlin.numberpicker.NumberPicker

                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                app:np_dividerColor="@color/themeDayDarkText"
                app:np_selectedTextColor="@color/themePrimary"
                app:np_textColor="@color/themeDayDarkText" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tvFormatPreviewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/setup_format_previewlabel" />

            <TextView
                android:id="@+id/tvFormatPreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingTop="4dp"
                android:paddingEnd="0dp"
                android:textAllCaps="false"
                android:textColor="@color/themeDayDarkText"
                android:textSize="20sp"
                android:typeface="monospace" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>