<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clUnitConverter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.converter.UnitConverterFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themeBackgroundDark"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInput"
            style="@style/TextInputLayoutStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"

            android:textColorHint="@color/themeDaySoftLightText"
            app:endIconMode="clear_text"
            app:endIconTint="@color/themeDayLightText"
            app:hintTextColor="@color/themeDaySoftLightText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/unit_type_value_text_hint"
                android:imeOptions="normal"
                android:inputType="none"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/themeDayLightText"
                android:textColorHighlight="@color/themePrimary"
                android:textIsSelectable="true"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_spinner"
                android:foregroundTint="#F1E7E7" />

            <ImageButton
                android:id="@+id/btnUnitInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/unit_info_button_description"
                android:scaleType="fitCenter"
                android:src="@drawable/unit_info_icon_selector" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLastCurrencyUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/themeDayLightText"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sbDistanceUnit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/colourDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tvColourDisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/colour_display_text" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUnitItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colourDisplay" />

    <!--<com.sbsc.convertee.tools.keyboards.CustomNumberKeyboard
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
